# questionary-superprompt

./: .pylintrc  README.md  example.py  pyproject.toml  superprompt.py
.github/workflows/: python-package.yml
examples/: example.py  example_dict.py  example_if.py  example_list.py  example_multiple.py
tests/: test_comprehensive.py  test_dict.py  test_if.py  test_list.py  test_multiple.py  test_superprompt.py  utils.py
