[tool.poetry]
name = "questionary-superprompt"
version = "0.1.0"
description = "An extension to the python questionary package that provides additional features for the prompt method."
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
